# Taskflow

./: .gitignore  pyproject.toml
app/: main.py
app/api/: auth.py  tasks.py
app/core/: config.py  dependencies.py  security.py
app/db/: __init__.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 35734de94e9c_add_soft_delete_and_timestamps_to_tasks.py  46f712ed5b51_add_server_default_to_users_created_at.py  56c03196e6d3_refactor_task_ownership_and_assignee.py  6d53fa3517de_create_tasks_table.py  881133f07c27_create_teams_table.py  8a3b6aa1cd8f_create_users_table.py  bf175344ad01_add_team_id_to_users.py
app/db/models/: __init__.py  task.py  team.py  user.py
app/schemas/: auth.py  task.py  user.py
